# semantic-map-server

./: CMakeLists.txt  package.xml
config/: semanticmap.pgm
include/semantic_map_server/: semantic_map_server_node.h  semantic_watcher_node.h
semantic_map_server/: CMakeLists.txt  README.md  package.xml
semantic_map_server/include/semantic_map_server/: semantic_map_server_node.h  semantic_watcher_node.h
semantic_map_server/launch/: semantic_server.launch
semantic_map_server/src/: semantic_map_server_node.cpp  semantic_watcher_node.cpp
semantic_map_server_msgs/: CMakeLists.txt  package.xml
semantic_map_server_msgs/msg/: SemanticMapMetaData.msg
src/: semantic_map_server_node.cpp  semantic_watcher_node.cpp
